--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -61,7 +61,7 @@
         "all_frames": true
     },
     {
-        "matches": ["http://stream.nbcsports.com/*/*", "http://stream.golfchannel.com/*", "http://stream.nbcdeportes.com/*"],
+        "matches": ["http://stream.nbcsports.com/*/*", "http://stream.nbcsports.com/*", "http://stream.golfchannel.com/*", "http://stream.nbcdeportes.com/*"],
         "js": ["nbcsn.js"],
         "css": ["nbcsn.css"],
         "all_frames": true
