created separate extension for nbcsn, added chrome app browser standalone to not have to use iframes, added the possibility for eight frames at once

--- a/chrome-app/browser/extension/extension-manifest.json
+++ b/chrome-app/browser/extension/extension-manifest.json
@@ -13,6 +13,11 @@
         "all_frames": true
     },
     {
+        "matches": ["http://*"],
+        "js": ["extension/cursor.js"],
+        "all_frames": true
+    },
+    {
         "matches": [
             "http://xfinitytv.comcast.net/live/network/espn*",
             "http://xfinitytv.comcast.net/live/network/sec*",
