--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -148,7 +148,7 @@
         "all_frames": true
     },
     {
-        "matches": ["http://www.bravotv.com/live", "http://www.cnbc.com/live-tv/", "http://www.eonline.com/now/live", "http://tv.esquire.com/now/live", "http://www.msnbc.com/now", "http://www.nbcuniverso.com/now/live", "http://www.oxygen.com/live"],
+        "matches": ["http://www.bravotv.com/live", "http://www.cnbc.com/live-tv/", "http://www.eonline.com/now/live", "http://tv.esquire.com/now/live", "http://www.msnbc.com/now", "http://www.nbcuniverso.com/now/live", "http://www.oxygen.com/live", "http://www.usanetwork.com/videos/live"],
         "css": ["bravo.css"],
         "all_frames": true
     },
