introduced client side schdeule channel change

--- a/chrome-app/browser/extension/manifest.json
+++ b/chrome-app/browser/extension/manifest.json
@@ -42,6 +42,11 @@
         "all_frames": true
     },
     {
+        "matches": ["http://www.cbssports.com/video/player/cbssportsnetworklive*"],
+        "css": ["cbssn-iframe.css"],
+        "all_frames": true
+    },
+    {
         "matches": ["http://www.cbs.com/live-tv/stream*", "https://www.cbs.com/live-tv/stream*"],
         "js": ["cbs.js"],
         "css": ["cbs.css"],
