--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "colors": "^1.0.3",
     "cookies": "^0.5.0",
     "express": "^4.14.0",
-    "node-static": "^0.7.6"
+    "node-static": "^0.7.6",
+    "moment": "^2.14.1",
+    "moment-timezone": "^0.5.5"
   },
   "devDependencies": {},
   "scripts": {
