adjusted cspan; added alpha support for winter olympics

--- a/chrome-app/browser/extension/manifest-extension.json
+++ b/chrome-app/browser/extension/manifest-extension.json
@@ -213,6 +213,11 @@
         "all_frames": true
     },
     {
+        "matches": ["https://www.c-span.org/networks/?channel=c-span*", "https://www.c-span.org/networks/?channel=c-span-2*", "https://www.c-span.org/networks/?channel=c-span-3*"],
+        "css": ["cspan.css"],
+        "all_frames": true
+    },
+    {
         "matches": ["http://watch.foodnetwork.com/live*"],
         "css": ["foodnetwork.css"],
         "all_frames": true
