--- a/chrome-app/browser/manifest.json
+++ b/chrome-app/browser/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "Home Sports Bar",
+  "name": "Home Sports Bar-1.3.0",
   "minimum_chrome_version": "44.0.1307.0",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "icons": {
     "16": "icon_16.png",
     "128": "icon_128.png"
