--- a/chrome-app/browser/extension/manifest-extension.json
+++ b/chrome-app/browser/extension/manifest-extension.json
@@ -32,6 +32,11 @@
         "all_frames": true
     },
     {
+        "matches": ["https://streamlabs.com/widgets/media/v1/*"],
+        "css": ["streamlabs.css"],
+        "all_frames": true
+    },
+    {
         "matches": ["http://www.ncaa.com/march-madness-live/game/*", "https://www.ncaa.com/march-madness-live/game/*"],
         "css": ["ncaa.css"],
         "all_frames": true
